refactor(rag): 按 code-review-checklist 全量修复审查发现的问题
高危修复：
- upload: 拆分 837 行 ChunkUploadServiceImpl 为 SessionStore/MinioGateway/MergeService
  三协作类；__merging 标记改 finally 清除（修复非业务异常永久卡死会话）；
  MinIO 故障从 ClientException 误分类改为 ServiceException 并保留 cause
- etl: FastTrackStrategy 加 @PreDestroy 接线 awaitAsyncCompletion（修复在途向量化
  任务被池关闭中断）；VectorStoreLoader delete-before-load 实现消息重投幂等；
  topic/group/batch/invisibleDuration 外置 EtlConsumerProperties
- service: 2 处 @Autowired(required=false) 字段注入改 ObjectProvider 构造注入；
  DocumentSupersedeService 裸 RuntimeException 字符串控制流改类型化
  GroupIdCasConflictException；EtlPipelineServiceImpl 等 12 处异常 cause 不再丢失；
  MinioFileStorageException 并入 ServiceException 体系
- retrieval: MmrDocumentPostProcessor 的 IllegalArgumentException 改 ServiceException；
  2 处裸 CompletableFuture 改 ScopedTasks/ContextSnapshot 上下文传播；
  HybridSearchService 降级契约统一（path 内 TimeoutException 不再裸穿透）；
  查询原文 PII 脱敏；日志 isInfoEnabled 守卫 + regex 预编译
- parser: Markdown/Pdf/Tika 统一包 DocumentParseException；POI/PdfBox/Tika 补
  BoundedInputStream/contentLength 尺寸守卫；Excel(415行)/PPT(330行) 拆出
  MarkdownTableBuilder/HeaderDetector/PptTableRenderer；工厂 null MIME 回退 Tika
- 并发: EtlDispatchService 锁按 documentId 排序防死锁
- 时间: 统一裸 OffsetDateTime.now()，遵循项目 TimeCodec/TIMESTAMPTZ 单一时区架构

性能：实体回写 O(n·m) 查找改 Map；embedding 逐条 UPDATE 改批量；日志计数改
count 查询；MMR 相似度矩阵预计算；Nanoid/对象路径常量收敛去重

God Class 收敛：ChunkUploadServiceImpl 837→576；StructureAwareChunkStrategy
392→268；DocumentApplicationServiceImpl 374→269；超 40 行方法全部提取子方法

测试：1571 全量通过；同步更新构造器签名与行为变化断言；修复分支既有
VectorStoreMapperTest 过期断言（ac17daf 移除 retrievalSource 未同步）